tests/fixtures/syntax/valid/document_file_minimal.repor
document file {
  title "Minimal documented source"
}

case "documented source runs" {
  $ true
  assert {
    exit 0
  }
}
