tests/fixtures/syntax/invalid/document_file_duplicate_block.repor
# A source may contain at most one `document file` block
# (parse.document_file.duplicate).
document file {
  title "first block"
}

document file {
  title "second block"
}

case "case after duplicate document file blocks" {
  $ true
  assert {
    exit 0
  }
}
